appId: com.anonymous.feupload
---
- launchApp:
    clearState: true
- tapOn: Email
- inputText: test2@example.com
- tapOn: Password
- inputText: "test2"
- tapOn: Sign In
- tapOn: Engenharia de Software
- tapOn: Exames
- extendedWaitUntil:
    visible: Test 22/23
    timeout: 10000
- tapOn: Test 22/23
- assertVisible: Test 22/23
