appId: com.anonymous.feupload
---
- launchApp:
    clearState: true
- tapOn: Email
- inputText: test2@example.com
- tapOn: Password
- inputText: "test2"
- tapOn: Sign In
- extendedWaitUntil:
    visible: "Bem-vindo, "
    timeout: 40000
- extendedWaitUntil:
    visible: Engenharia de Software
    timeout: 20000
- tapOn: Engenharia de Software
- tapOn: Exames
- tapOn: Avaliar material
- assertVisible: Avaliações de Material
- assertVisible: "3.0"
- assertVisible: Avaliar Material
- tapOn: Avaliar Material
- assertVisible: Avaliar
- assertVisible: A tua classificação
- assertVisible: Bom (3/5)
- tapOn:
    text: "Classificação 5"
- assertVisible: Excelente (5/5)
- tapOn: Publicar Avaliação
