appId: com.anonymous.feupload
---
- launchApp:
    clearState: true
- tapOn: Email
- inputText: test2@example.com
- tapOn: Password
- inputText: "test2"
- tapOn: Sign In
- extendedWaitUntil:
    visible: "Bem-vindo, "
    timeout: 40000
- extendedWaitUntil:
    visible: Engenharia de Software
    timeout: 20000
- tapOn: Engenharia de Software
- tapOn: Fórum de discussão
- tapOn: , Nova publicação
- tapOn: Sobre o que queres falar?
- inputText: Hello
- assertVisible: Hello
- tapOn: Escreve aqui a tua dúvida ou comentário...
- inputText: Hello Hello
- assertVisible: Hello Hello
- tapOn: , Publicar no Fórum
- assertVisible: Hello Hello
- tapOn: Hello, Hello Hello, , test2, ·, 5/6/2026, , 0 respostas
- tapOn: Hello
- tapOn: Hello Hello
